packages/typ/tests/fixtures/diagnostics/0085_core_plus_bool_08.ml.infer.expected
File "0085_core_plus_bool_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0085_core_plus_bool_08 is not a valid module name.

File "0085_core_plus_bool_08.ml", line 2, characters 50-54:
2 | let _ = match false with true -> 7 | false -> 1 + true
                                                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
