packages/typ/tests/fixtures/diagnostics/0085_core_plus_bool_08.ml
let ( + ) (x : int) (y : int) : int = x
let _ = match false with true -> 7 | false -> 1 + true
